--- a/FuelEconomyLookup/app/build.gradle
+++ b/FuelEconomyLookup/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 2016092801
-        versionName "1.0"
+        versionName "1.0.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -32,21 +32,20 @@ ext {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile "com.android.support:support-v13:$supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:support-compat:$supportLibraryVersion"
-
-    testCompile 'junit:junit:4.12'
-
+    compile "com.android.support:support-core-utils:$supportLibraryVersion"
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile ('com.squareup.retrofit2:converter-simplexml:2.+'){
         exclude group: 'xpp3', module: 'xpp3'
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'stax', module: 'stax'
     }
-
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'org.greenrobot:eventbus:3.0.0'
 }
