--- a/FuelEconomyLookup/app/build.gradle
+++ b/FuelEconomyLookup/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.interview.vaporstream.fueleconomy"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 2016092801
         versionName "1.0.0.0"
@@ -38,6 +38,7 @@ dependencies {
     })
 
     compile "com.android.support:support-v13:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:support-compat:$supportLibraryVersion"
     compile "com.android.support:support-core-utils:$supportLibraryVersion"
