--- a/FuelEconomyLookup/app/src/main/AndroidManifest.xml
+++ b/FuelEconomyLookup/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pump_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -15,21 +15,36 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.SplashActivity"
-                  android:label=""
-                  android:theme="@style/AppTheme" />
-
         <activity android:name=".activity.SavedVehicleListActivity"
-                  android:label="@string/activity_saved_vehicle_list_title"
-                  android:theme="@style/AppTheme" />
+                  android:label="@string/app_name"
+                  android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".activity.SelectVehicleActivity"
                   android:label="@string/activity_select_vehicle_title"
-                  android:theme="@style/AppTheme" />
+                  android:theme="@style/AppTheme"
+                  android:parentActivityName=".activity.SavedVehicleListActivity">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.SavedVehicleListActivity" />
+
+        </activity>
 
         <activity android:name=".activity.VehicleInfoActivity"
                   android:label="@string/activity_vehicle_info_title"
-                  android:theme="@style/AppTheme" />
+                  android:theme="@style/AppTheme"
+                  android:parentActivityName=".activity.SavedVehicleListActivity">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.SavedVehicleListActivity" />
+
+        </activity>
 
     </application>
 </manifest>
