--- a/FuelEconomyLookup/app/build.gradle
+++ b/FuelEconomyLookup/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.interview.vaporstream.fueleconomy"
+        applicationId "com.interview.fueleconomy"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 2016092801
